Fix link spacing, refactor class names

--- a/assets/main.css
+++ b/assets/main.css
@@ -23,8 +23,8 @@ header {
   line-height: 1.3;
 }
 
-/* Main page header */
-body > header {
+/* Main page header, navigation */
+.navigation {
   justify-content: space-between;
   align-items: center;
   flex-flow: row wrap;
@@ -94,17 +94,23 @@ pre {
 }
 
 /* Image lists */
-div.gallery {
+.gallery {
   justify-content: space-between;
   display: flex;
+  margin: 1em 0;
 }
 
-div.gallery > img {
+.gallery img {
   width: 100%;
 }
 
-div.gallery > img:not(:last-child) {
+.gallery img:not(:last-child) {
   margin-right: 1em;
+}
+
+/* Article list */
+.articles article {
+  margin-bottom: 2em;
 }
 
 /* Misc */
